# P76-002_pivot

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  pivot.c  tests.sh  tests.unpivot.sh
